# prfs

./: Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/prfs/: __init__.py  cli.py  git.py  github.py  github_cli.py  thread.py
tests/: conftest.py  test_cli.py  test_e2e.py  test_github.py  test_thread.py
tests/unit/: conftest.py  test_cli.py  test_github.py  test_thread.py
