[project]
name = "prfs"
dynamic = ["version"]
description = "Inline PR comments as local files"
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "alexjuda", email = "alexanderjuda@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pyyaml",
    "typer>=0.15.0",
    "rich>=13.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/alexjuda/prfs"
Repository = "https://github.com/alexjuda/prfs"
Issues = "https://github.com/alexjuda/prfs/issues"

[project.scripts]
prfs = "prfs.cli:main"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring real external services",
]

[tool.ruff]
[tool.ruff.lint]
select = ["I"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
    "ty>=0.0.23",
]
